--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/listaFragment">
 
+    <fragment
+        android:id="@+id/listaFragment"
+        android:name="br.com.impacta.laboratrio16.ListaFragment"
+        android:label="fragment_lista"
+        tools:layout="@layout/fragment_lista" >
+        <action
+            android:id="@+id/action_listaFragment_to_criarEditarFragment"
+            app:destination="@id/criarEditarFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/criarEditarFragment"
+        android:name="br.com.impacta.laboratrio16.CriarEditarFragment"
+        android:label="fragment_criar_editar"
+        tools:layout="@layout/fragment_criar_editar" >
+        <action
+            android:id="@+id/action_criarEditarFragment_to_listaFragment"
+            app:destination="@id/listaFragment" />
+        <argument
+            android:name="contatoId"
+            app:argType="integer"
+            android:defaultValue="-1" />
+    </fragment>
 </navigation>
